# rust-web-app

./: .gitignore  .travis.yml  Cargo.toml  README.md  Rocket.toml  rustfmt.toml
.github/workflows/: rust.yml
ci/: travis.sh
src/: lib.rs  logger.rs  main.rs  store.rs
src/api/: client.rs  customers.rs  error.rs  id.rs  infra.rs  mod.rs  orders.rs  products.rs
src/api/infra/: error.rs  id.rs  request.rs  span.rs
src/app/: client.rs  customers.rs  error.rs  id.rs  mod.rs  orders.rs  products.rs
src/domain/: entity.rs  error.rs  future.rs  id.rs  mod.rs  resolver.rs  transaction.rs  version.rs
src/domain/customers/: mod.rs  resolver.rs
src/domain/customers/commands/: create_customer.rs  mod.rs
src/domain/customers/model/: mod.rs  store.rs  test_data.rs
src/domain/customers/queries/: get_customer.rs  get_customer_with_orders.rs  mod.rs
src/domain/infra/: currency.rs  entity.rs  func.rs  future.rs  id.rs  mod.rs  resolver.rs  version.rs
src/domain/infra/transaction/: active.rs  resolver.rs
src/domain/infra/transactions/: active.rs  mod.rs  resolver.rs
src/domain/orders/: mod.rs  order.rs  resolver.rs
src/domain/orders/commands/: add_or_update_product.rs  add_product.rs  create_order.rs  mod.rs
src/domain/orders/model/: id.rs  mod.rs  store.rs  test_data.rs  version.rs
src/domain/orders/queries/: get_line_item_with_product.rs  get_order.rs  get_order_summaries_for_customer.rs  get_order_with_products.rs  mod.rs
src/domain/products/: mod.rs  product.rs  resolver.rs
src/domain/products/commands/: create_product.rs  mod.rs  set_product.rs  set_product_title.rs
src/domain/products/infra/: mod.rs  store.rs
src/domain/products/model/: id.rs  mod.rs  store.rs  test_data.rs  version.rs
src/domain/products/queries/: get_product.rs  get_product_summaries.rs  mod.rs
src/infra/: mod.rs
src/storage/: mod.rs
src/store/: mod.rs  resolver.rs  transaction.rs  value.rs
tests/: customers.rs  orders.rs  products.rs
