[package]
name = "shop"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false
edition = "2021"

[dependencies.rocket]
version = "=0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_codegen]
version = "=0.5.0-rc.2"

[dependencies.futures]
version = "~0.3"

[dependencies.serde]
version = "~1"

[dependencies.serde_derive]
version = "~1"

[dependencies.serde_json]
version = "~1"

[dependencies.uuid]
version = "~1"
features = ["serde", "v4"]

[dependencies.log]
version = "~0.4"
features = ["serde"]

[dependencies.env_logger]
version = "~0.8"

[dependencies.thiserror]
version = "~1"

[dependencies.auto_impl]
version = "~1"

[dependencies.once_cell]
version = "~1"

[dependencies.async-trait]
version = "~0.1"

[dev-dependencies.tokio]
version = "~1"
features = ["macros"]
