[package]
name = "shop"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false
edition = "2021"

[dependencies.rocket]
version = "~0.5"
features = ["json"]

[dependencies.rocket_codegen]
version = "~0.5"

[dependencies.serde]
version = "~1"

[dependencies.serde_derive]
version = "~1"

[dependencies.serde_json]
version = "~1"

[dependencies.uuid]
version = "~1"
features = ["serde", "v4"]

[dependencies.emit]
version = "0.11.0-alpha.9"
features = ["serde"]

[dependencies.emit_term]
version = "0.11.0-alpha.9"

[dependencies.thiserror]
version = "~1"

[dependencies.auto_impl]
version = "~1"

[dependencies.once_cell]
version = "~1"

[dev-dependencies.tokio]
version = "~1"
features = ["macros"]
